--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,6 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-*
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -30,7 +27,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-
 .env
 
 launch.json
+
+.vscode
