--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,32 +9,39 @@ andrew:
   phone_number: 3192346678
   timezone: America/New_York
   confirmed_at: <%= 1.day.ago.to_s %>
-  customer_id: cus_LzcmaujH3Zt5wd
 
 bob:
   provider: email
   uid: bobronald@gmail.com
   # decrypted_password: password
   encrypted_password: $2a$12$TTzmrRo3MbiEFoyc9JEekuTobdj1ZuWumfO2/kN9RW4IuWlHvDQ1G
-  confirmed_at:
   email: bobronald@gmail.com
   first_name: Bob
   last_name: Ronald
   phone_number: 3293315526
   timezone: America/New_York
   confirmed_at: <%= 1.day.ago.to_s %>
-  customer_id: cus_LzcnXDAv1vBp35
 
 cody:
   provider: email
   uid: codyjones@gmail.com
   # decrypted_password: password
   encrypted_password: $2a$12$TTzmrRo3MbiEFoyc9JEekuTobdj1ZuWumfO2/kN9RW4IuWlHvDQ1G
-  confirmed_at:
   email: codyjones@gmail.com
   first_name: Cody
   last_name: Jones
   phone_number: 3912301992
   timezone: America/New_York
   confirmed_at: <%= 1.day.ago.to_s %>
-  customer_id: cus_M1Ui0Glnt9kZ5f
+
+dan_billing_manager:
+  provider: email
+  uid: danryan@gmail.com
+  # decrypted_password: password
+  encrypted_password: $2a$12$TTzmrRo3MbiEFoyc9JEekuTobdj1ZuWumfO2/kN9RW4IuWlHvDQ1G
+  email: danryan@gmail.com
+  first_name: Dan
+  last_name: Ryan
+  phone_number: 3912301994
+  timezone: America/New_York
+  confirmed_at: <%= 1.day.ago.to_s %>
